--- a/src/main/java/espe/movies/view/VentanaPrincipal.form
+++ b/src/main/java/espe/movies/view/VentanaPrincipal.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="espe.movies.vista.VentanaPrincipal">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="espe.movies.view.VentanaPrincipal">
   <grid id="27dc6" binding="MainFrame" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="895" height="663"/>
@@ -382,7 +382,7 @@
               </component>
             </children>
           </grid>
-          <grid id="90f18" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="15" vgap="15">
+          <grid id="90f18" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="15" vgap="15">
             <margin top="20" left="20" bottom="20" right="20"/>
             <constraints>
               <tabbedpane title="Sugerencias"/>
@@ -392,11 +392,19 @@
             <children>
               <component id="2578e" class="javax.swing.JTable" binding="tablaSugerencias">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="50"/>
                   </grid>
                 </constraints>
                 <properties/>
+              </component>
+              <component id="64050" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Sugerencias"/>
+                </properties>
               </component>
             </children>
           </grid>
